# MemG

./: .env.example  .gitignore  MEMORY_ARCHITECTURE.md  MEMORY_OVERVIEW.md  README.md  claude.md  config.go  configfile.go  env.go  errors.go  go.mod  go.sum  memg.example.json  memg.go  option.go  package-lock.json  package.json  tsconfig.json
bench/: dataset.go  extract.go  recall.go  runner.go  scoring.go
benchmark/: _full_bench.ts  diagnostics.ts  evaluator.ts  package-lock.json  package.json  runner.ts  server.ts  tsconfig.json  types.ts
embed/: chunk.go  config.go  embedder.go  probe.go  registry.go  remote.go
graph/: triple.go
llm/: config.go  message.go  provider.go  registry.go
mcp/: handler.go  server.go  tools.go
memory/: artifact.go  artifact_detect.go  conscious.go  conscious_cache.go  consolidator.go  context.go  conversation.go  decay.go  entity_mentions.go  query.go  recall.go  recall_context.go  recall_summaries.go  reembed.go  summary.go  turnsummary.go
proto/: embedder.proto
proxy/: entity.go  extract.go  format.go  format_anthropic.go  handler.go  (+6 more)
sdk/python/: README.md  pyproject.toml
sdk/python/memg/: __init__.py  artifact.py  artifact_detect.py  client.py  config.py  conscious.py  consolidator.py  context.py  conversation.py  decay.py  embedder.py  entity_mentions.py  extract.py  intercept.py  mysql_store.py  postgres_store.py  proxy.py  query.py  recall.py  recall_context.py  reembed.py  schema.py  search.py  session.py  store.py  summary.py  turn_summary.py  types.py
sdk/python/memg/providers/: anthropic.py  gemini.py  openai.py
(+189 files in other folders)
