[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memg-sdk"
version = "0.2.0"
description = "Memory layer for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["memg"]

[project.optional-dependencies]
local = ["sentence-transformers>=2.2.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
